# espnow-split-keyboard-rts-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig.defaults.esp1  sdkconfig.defaults.esp2
components/button_debounce/: CMakeLists.txt  button_debounce.c
components/button_debounce/include/: button_debounce.h
components/keyboard_hid/: CMakeLists.txt  keyboard_hid.c
components/keyboard_hid/include/: keyboard_hid.h
components/shared_protocol/include/: protocol.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/left_node/: left_node.c  left_node.h
main/right_node/: right_node.c  right_node.h
tools/linux_hid_bridge/: requirements.txt  rightnode_linux_hid_bridge.py
